--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,6 +6,9 @@ buildscript {
         minSdkVersion = 16
         compileSdkVersion = 29
         targetSdkVersion = 29
+        supportLibVersion = "29.0.0"
+        googlePlayServicesVersion = "16.0.0" //Add this
+        firebaseVersion = "17.0.0" //Add this
     }
     repositories {
         google()
