--- a/package.json
+++ b/package.json
@@ -11,7 +11,34 @@
   },
   "dependencies": {
     "react": "16.13.1",
-    "react-native": "0.63.2"
+    "react-native": "0.63.2",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.7.3",
+    "@react-navigation/drawer": "^5.8.7",
+    "@react-navigation/native": "^5.6.1",
+    "@react-navigation/stack": "^5.6.2",
+    "@reduxjs/toolkit": "^1.4.0",
+    "lodash": "^4.17.19",
+    "native-base": "^2.13.13",
+    "react-native-build-config": "^0.3.2",
+    "react-native-camera": "^3.35.0",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-google-places-autocomplete": "^1.8.0",
+    "react-native-maps": "0.27.1",
+    "react-native-permissions": "^2.1.5",
+    "react-native-push-notification": "^5.0.1",
+    "react-native-qrcode-scanner": "^1.4.1",
+    "react-native-reanimated": "^1.9.0",
+    "react-native-safe-area-context": "^3.0.7",
+    "react-native-screens": "^2.9.0",
+    "react-native-vector-icons": "^7.0.0",
+    "react-native-version-number": "^0.3.6",
+    "react-native-webview": "^10.3.2",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.11.1",
